fix(icon): set default $icon-vertical-align as -0.18em #INFR-536

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -75,7 +75,7 @@ $link-icon-padding-right: 4px !default;
 $box-shadow: 0 0 24px rgba(0, 0, 0, 0.18) !default;
 
 // icon
-$icon-vertical-align: -0.2em !default;
+$icon-vertical-align: -0.18em !default;
 
 // 扩展
 $font-size-md: 1rem !default; // 16px
@@ -371,7 +371,7 @@ $nav-link-primary-padding-y: 0.813rem !default; // 高度 50px
 $nav-link-primary-padding-x: 1rem !default;
 $nav-link-primary-right: 20px !default;
 $nav-link-primary-min-width: 80px !default;
-$nav-link-secondary-padding-y: 0.407rem !default; // 高度 38px
+$nav-link-secondary-padding-y: 0.438rem !default; // 高度 38px
 $nav-link-secondary-padding-x: 0rem !default;
 $nav-link-secondary-right: 40px !default;
 $nav-link-secondary-split-right: 60px !default;
